--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app="cfp">
 <head>
-	<title>Login</title>
+	<title>CFP</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
