--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="libs/css/animate.css">
 	<!-- Font awesome -->
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="libs/css/style.css">
 	<style type="text/css">
 	body {
 		background: #ddd;
