--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<script src="libs/js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
 	<script src="libs/js/ui-router/angular-ui-router.min.js"></script>
 	<script src="libs/js/plugins/angular-idle/angular-idle.js"></script>
+	<script src="libs/js/plugins/number-picker/angular-number-picker.min.js"></script>
 
 	<!-- Services -->
 	<script src="libs/js/services/authenticationAPI.js"></script>
