--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
 	<div ui-view></div>
 
 	<br><br><br><br><br>
+
 	<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
 		<div class="container" style="padding-top:15px; text-align:center; color:#fff;">
 	         CFP 2016 - by Adelson Guimarães
 	    </div>
 	</nav>
+
+	<div class="menu">
+		<ul>
+			<li><a href="#home"><i class="fa fa-home  fa-3x" title="Home"></i></a></li>
+			<li><a href="#despesa"><i class="fa fa-bank  fa-3x"  title="Despesas"></i></a></li>
+			<li><a href="#recebimento"><i class="fa fa-money fa-3x"  title="Recebimentos"></i></a></li>
+		</ul>
+	</div>
 
 	<script src="libs/js/jquery-2.2.4.min.js"></script>
 	<script src="libs/js/angular.min.js"></script>
