--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 	<div class="menu">
 		<ul>
-			<li><a href="#home"><i class="fa fa-home  fa-3x" title="Home"></i></a></li>
-			<li><a href="#despesa"><i class="fa fa-bank  fa-3x"  title="Despesas"></i></a></li>
-			<li><a href="#recebimento"><i class="fa fa-money fa-3x"  title="Recebimentos"></i></a></li>
+			<li><a href="#home"><i class="fa fa-home" title="Home"></i></a></li>
+			<li><a href="#despesa"><i class="fa fa-bank"  title="Despesas"></i></a></li>
+			<li><a href="#recebimento"><i class="fa fa-money"  title="Recebimentos"></i></a></li>
 		</ul>
 	</div>
 
