--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	}
 	</style>
 </head>
-<body>
+<body ng-controller="mainCtrl">
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container" style="padding-top:15px; text-align:center; color:#fff;">
 	   		<h4>CFP - Controle Financeiro Pessoal</h4>
@@ -35,7 +35,7 @@
 	    </div>
 	</nav>
 
-	<div class="menu">
+	<div class="menu" ng-if="usuario">
 		<ul>
 			<li><a href="#home"><i class="fa fa-home" title="Home"></i></a></li>
 			<li><a href="#despesa"><i class="fa fa-bank"  title="Despesas"></i></a></li>
@@ -63,6 +63,7 @@
 
 	<!-- Services -->
 	<script src="libs/js/services/authenticationAPI.js"></script>
+	<script src="libs/js/services/genericAPI.js"></script>
 
 </body>
 <!-- Classe gerada com BlackCoffeePHP 1.0 - by Adelson Guimarães -->
