--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 	<script src="libs/js/services/authenticationAPI.js"></script>
 	<script src="libs/js/services/genericAPI.js"></script>
 
+	<!-- Filters -->
+	<script src="libs/js/filters/filters.js"></script>
+
 </body>
 <!-- Classe gerada com BlackCoffeePHP 1.0 - by Adelson Guimarães -->
 </html>
