--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 	<!-- App -->
 	<script type="text/javascript" src="libs/js/app.js"></script>
 	<!-- Controller -->
-	<script type="text/javascript" src="libs/js/controllers/controllers.js"></script>
+	<!-- <script type="text/javascript" src="libs/js/controllers/controllers.js"></script> -->
+	<script type="text/javascript" src="libs/js/controllers/mainCtrl.js"></script>
+	<script type="text/javascript" src="libs/js/controllers/loginCtrl.js"></script>
+	<script type="text/javascript" src="libs/js/controllers/homeCtrl.js"></script>
+	<script type="text/javascript" src="libs/js/controllers/despesaCtrl.js"></script>
+	<script type="text/javascript" src="libs/js/controllers/recebimentoCtrl.js"></script>
 	<!-- Config -->
 	<script type="text/javascript" src="libs/js/config.js"></script>
 	
