--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	<script type="text/javascript" src="libs/js/controllers/homeCtrl.js"></script>
 	<script type="text/javascript" src="libs/js/controllers/despesaCtrl.js"></script>
 	<script type="text/javascript" src="libs/js/controllers/recebimentoCtrl.js"></script>
+	<script type="text/javascript" src="libs/js/controllers/faturaCtrl.js"></script>
 	<!-- Config -->
 	<script type="text/javascript" src="libs/js/config.js"></script>
 	
